--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "size": "forge build --sizes --force",
     "deploy:optimism:core": "forge script --use 0.8.21 src/scripts/deploy/optimism/Deploy.sol:Deploy --rpc-url $(grep OPTIMISM_RPC .env | cut -d '=' -f2) --broadcast --slow --verify -vvvv",
     "compile": "forge build",
-    "solc:lrt": "cat audit_scope.txt | xargs ls -d 2>/dev/null | xargs wc -l"
+    "audit_scope": "tree -f -i -I '*interfaces*' -I '*libraries*' | grep '^./src.*sol' > audit_scope.txt",
+    "solc:lrt": "tree -f -i -I '*interfaces*' -I '*libraries*' | grep '^./src.*sol' | xargs ls -d 2>/dev/null | xargs wc -l"
   }
 }
