--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "size": "forge build --sizes --force",
     "deploy:optimism:core": "forge script --use 0.8.21 src/scripts/deploy/optimism/Deploy.sol:Deploy --rpc-url $(grep OPTIMISM_RPC .env | cut -d '=' -f2) --broadcast --slow --verify -vvvv",
     "compile": "forge build",
-    "audit_scope": "tree -f -i -I '*interfaces*' -I '*libraries*' | grep '^./src.*sol' | xargs ls -d 2>/dev/null | xargs wc -l > audit_scope.txt && cat audit_scope.txt",
+    "audit_scope": "scc src --exclude-dir libraries --exclude-dir interfaces --by-file --wide",
     "coverage": "forge coverage --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --fork-block-number 19762100",
     "coverage:report": "forge coverage --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --fork-block-number 19762100 --report lcov && genhtml lcov.info -o report --branch-coverage && rm lcov.info"
   }
