--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "compile": "forge build",
     "audit_scope": "tree -f -i -I '*interfaces*' -I '*libraries*' | grep '^./src.*sol' | xargs ls -d 2>/dev/null | xargs wc -l > audit_scope.txt && cat audit_scope.txt",
     "scc:report": "scc src --sort names --no-cocomo --exclude-dir libraries --exclude-dir interfaces --by-file --format html > scc-report.html",
-    "solidity-code-metrics:report": "solidity-code-metrics $(tree -f -i -I '*interfaces*' -I '*libraries*' | grep '^./src.*sol' | xargs ls -d 2>/dev/null) > solidity-code-metrics-report.md",
+    "solidity-code-metrics:report": "solidity-code-metrics $(tree -f -i -I '*interfaces*' -I '*libraries*' | grep '^./src.*sol' | xargs ls -d 2>/dev/null) --html > solidity-code-metrics-report.html",
     "coverage": "forge coverage --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --fork-block-number 19845261",
     "coverage:report": "forge coverage --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --fork-block-number 19845261 --report lcov && genhtml lcov.info -o report --branch-coverage && rm lcov.info"
   },
