--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "test:obol": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/\\*",
     "test:obol:solvency:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/solvency/SolvencyTest.t.sol --fork-block-number 1947000",
     "test:obol:solvency:mainnet": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/solvency/SolvencyTest.t.sol --fork-block-number 20185753",
+    "test:obol:solvency:holesky:onchain": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/solvency/SolvencyOnchainTest.t.sol --fork-block-number 1968382",
+    "test:obol:happy-path:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/happy-path/HappyPathTest.t.t.sol --fork-block-number 1968382",
+    "test:obol:sunset:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/sunset/SunsetTest.t.sol --fork-block-number 1968382",
     "test:obol:acceptance:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/acceptance/AcceptanceTest.t.sol --fork-block-number 1947000",
     "test:obol:acceptance:mainnet": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/acceptance/AcceptanceTest.t.sol --fork-block-number 20185753",
     "test:obol:permissions:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/permissions/PermissionsTest.t.sol --fork-block-number 1947000",
