symbiotic vault: init

--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "prettier-plugin-solidity": "^1.0.0-beta.13"
   },
   "scripts": {
-    "prettier": "prettier --write ./src/** && prettier --write ./tests/** && prettier --write ./scripts/**",
-    "prettier:check": "prettier --check ./src/** && prettier --check ./tests/**",
-    "prettier:changed": "prettier --write $(git status | grep '\\.sol' | grep -e 'modified:' -e 'new file:' | cut -d ' ' -f 4,5)",
+    "prettier": "prettier --write ./src/** ./tests/** ./scripts/** --cache --loglevel warn -u",
+    "prettier:check": "prettier --check ./src/**",
     "test": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --fork-block-number 19845261 --match-path ./tests/mainnet/\\*",
     "test:acceptance": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --fork-block-number 19845261 --match-path ./tests/mainnet/e2e/AcceptanceTest.t.sol",
     "test:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/holesky/\\*",
