--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test:obol:permissions:holesky:onchain-validate": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/permissions/PermissionsTest.t.sol --match-test testPermissionsOnchain",
     "size": "forge build --sizes --force",
     "deploy:obol:holesky": "forge script --use 0.8.25 scripts/obol/Deploy.s.sol:Deploy --rpc-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --broadcast --legacy -vvvv --verify --etherscan-api-key $(grep HOLESKY_API_KEY .env | cut -d '=' -f2)",
+    "deploy:obol:mainnet": "forge script --use 0.8.25 scripts/obol/Deploy.s.sol:Deploy --rpc-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --broadcast --legacy -vvvv --verify --etherscan-api-key $(grep ETHERSCAN_API_KEY .env | cut -d '=' -f2)",
     "deploy:symbiotic:mainnet": "forge script --use 0.8.25 scripts/mainnet/Deploy.s.sol:Deploy --rpc-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --broadcast --legacy -vv --etherscan-api-key $(grep HOLESKY_API_KEY .env | cut -d '=' -f2)",
     "compile": "forge build",
     "audit_scope": "tree -f -i -I '*interfaces*' -I '*libraries*' | grep '^./src.*sol' | xargs ls -d 2>/dev/null | xargs wc -l > audit_scope.txt && cat audit_scope.txt",
