--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
     "test:obol:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/holesky-obol/\\*",
     "test:obol": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/\\*",
     "test:obol:solvency:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/solvency/SolvencyTest.t.sol --fork-block-number 2025660",
-    "test:obol:solvency:mainnet": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/solvency/SolvencyTest.t.sol --fork-block-number 20185753",
+    "test:obol:solvency:mainnet": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/solvency/SolvencyTest.t.sol --fork-block-number 20442500",
     "test:obol:solvency:holesky:onchain": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/solvency/SolvencyOnchainTest.t.sol --fork-block-number 2025660",
+    "test:obol:solvency:mainnet:onchain": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/solvency/SolvencyOnchainTest.t.sol --fork-block-number 20442500",
     "test:obol:happy-path:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/happy-path/HappyPathTest.t.t.sol --fork-block-number 2025660",
     "test:obol:sunset:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/sunset/SunsetTest.t.sol --fork-block-number 2025660",
     "test:obol:acceptance:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/acceptance/AcceptanceTest.t.sol --fork-block-number 2025660",
-    "test:obol:acceptance:mainnet": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/acceptance/AcceptanceTest.t.sol --fork-block-number 20185753",
+    "test:obol:acceptance:mainnet": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/acceptance/AcceptanceTest.t.sol --fork-block-number 20442500",
     "test:obol:permissions:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/permissions/PermissionsTest.t.sol --fork-block-number 2025660",
-    "test:obol:permissions:mainnet": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/permissions/PermissionsTest.t.sol --fork-block-number 20185753",
-    "test:obol:permissions:holesky:onchain-collect": "python3 tests/obol/permissions/collector.py",
+    "test:obol:permissions:mainnet": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/permissions/PermissionsTest.t.sol --fork-block-number 20442500",
+    "test:obol:permissions:onchain-collect": "python3 tests/obol/permissions/collector.py",
     "test:obol:permissions:holesky:onchain-validate": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/permissions/PermissionsTest.t.sol --match-test testPermissionsOnchain",
+    "test:obol:permissions:mainnet:onchain-validate": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/permissions/PermissionsTest.t.sol --match-test testPermissionsOnchain",
     "size": "forge build --sizes --force",
     "deploy:obol:holesky": "forge script --use 0.8.25 scripts/obol/Deploy.s.sol:Deploy --rpc-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --broadcast --legacy -vvvv --verify --etherscan-api-key $(grep HOLESKY_API_KEY .env | cut -d '=' -f2)",
     "deploy:obol:mainnet": "forge script --use 0.8.25 scripts/obol/Deploy.s.sol:Deploy --rpc-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --broadcast --legacy -vvvv --verify --etherscan-api-key $(grep ETHERSCAN_API_KEY .env | cut -d '=' -f2)",
