--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test:obol:solvency:holesky:onchain": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/solvency/SolvencyOnchainTest.t.sol --fork-block-number 2025660",
     "test:obol:solvency:mainnet:onchain": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/solvency/SolvencyOnchainTest.t.sol --fork-block-number 20442500",
     "test:obol:happy-path:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/happy-path/HappyPathTest.t.t.sol --fork-block-number 2025660",
+    "test:obol:happy-path:mainnet": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/happy-path/HappyPathTest.t.t.sol --fork-block-number 20442500",
     "test:obol:sunset:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/sunset/SunsetTest.t.sol --fork-block-number 2025660",
+    "test:obol:sunset:mainnet": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/sunset/SunsetTest.t.sol --fork-block-number 20442500",
     "test:obol:acceptance:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/acceptance/AcceptanceTest.t.sol --fork-block-number 2025660",
     "test:obol:acceptance:mainnet": "forge test -vvv --fork-url $(grep MAINNET_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/acceptance/AcceptanceTest.t.sol --fork-block-number 20442500",
     "test:obol:permissions:holesky": "forge test -vvv --fork-url $(grep HOLESKY_RPC .env | cut -d '=' -f2,3,4,5) --match-path ./tests/obol/permissions/PermissionsTest.t.sol --fork-block-number 2025660",
